# ai-gym-trainer-be

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
app/Controllers/: UserControllers.py
app/Services/: UserServices.py
app/common/: constants.py  helpers.py
app/controllers/: auth_controller.py  auth_controllers.py  goal_questions_controller.py  gyms_controller.py  user_controller.py
app/middlewares/: __init__.py  response_middleware.py
app/repositories/: auth_repository.py  categories_repository.py  goal_questions_repository.py  gym_repository.py  user_repository.py
app/schemas/: __init__.py  auth_schemas.py  common_schemas.py  goal_questions_schemas.py  user_goal_answers_schema.py
app/services/: auth_services.py  goal_questions_services.py  gym_services.py  user_service.py
core/: config.py  security.py
db/: database.py  mixins.py
db/alembic/: env.py
db/alembic/versions/: 18fb44347735_goalquestion_category_column_name_change.py  21369a28389d_initial_database.py  (+7 more)
db/schemas/: __init__.py  ai_models.py  ai_provider.py  body_measurements.py  categories.py  equipments.py  exercise_equipment.py  exercise_videos.py  exercises.py  goal_question_options.py  goal_questions.py  gym_equipments.py  gyms.py  muscles.py  question_options.py  questions.py  roles.py  user_ai_settings.py  user_answers.py  user_conditions.py  user_goal_answer.py  user_gyms.py  users.py  workout_exercise_details.py  workout_exercises.py
db/seeders/: seed.py  seed_data.py
routers/: __init__.py  auth.py  gym.py  questions.py  users.py
