[project]
name = "be-aigymtrainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "alembic-postgresql-enum>=1.10.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.139.0",
    "greenlet>=3.5.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.2",
]
